--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,12 @@ compiler:
 
 install:
   - git clone https://github.com/spectrenoir06/norminette.git
+  - git clone git://github.com/rubinius/rubinius.git
   - sudo apt-get install -y build-essential bison ruby-dev rake zlib1g-dev libyaml-dev libssl-dev libreadline-dev libncurses5-dev llvm llvm-dev
+  - cd rubinius/
+  - bundle install
+  - ./configure
+  - rake install
 
 script:
   - ./norminette/norminette.rb *.c
