--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,20 @@ compiler:
   - gcc
 
 install:
-  - git clone https://github.com/spectrenoir06/norminette.git
-  - git clone git://github.com/rubinius/rubinius.git
-  - sudo apt-get install -y build-essential bison ruby-dev rake zlib1g-dev libyaml-dev libssl-dev libreadline-dev libncurses5-dev llvm llvm-dev
-  - cd rubinius/
-  - bundle install
-  - ./configure
-  - rake install
-  - cd ..
+  - ##git clone https://github.com/spectrenoir06/norminette.git
+  - ##git clone git://github.com/rubinius/rubinius.git
+  - git clone https://github.com/Nax/libft-test.git
+  - ##sudo apt-get install -y build-essential bison ruby-dev rake zlib1g-dev libyaml-dev libssl-dev libreadline-dev libncurses5-dev llvm llvm-dev
+  - ##cd rubinius/
+  - ##bundle install
+  - ##./configure
+  - ##rake install
+  - ##cd ..
 
 script:
-  - ./norminette/norminette.rb *.c
+  - ##./norminette/norminette.rb *.c
+  - make
+  - cp libft.a libft-test/
+  - cd libft-test/unit_test/
   - make
   - ls -la
