--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
   - ##./norminette/norminette.rb *.c
   - make
   - cp libft.a libft-test/
+  - cp libft.h libft-test/unit_test/
   - cd libft-test/unit_test/
   - make
   - ls -la
