--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ compiler:
 install:
   - ##git clone https://github.com/spectrenoir06/norminette.git
   - ##git clone git://github.com/rubinius/rubinius.git
-  - git clone https://github.com/Nax/libft-test.git
   - ##sudo apt-get install -y build-essential bison ruby-dev rake zlib1g-dev libyaml-dev libssl-dev libreadline-dev libncurses5-dev llvm llvm-dev
   - ##cd rubinius/
   - ##bundle install
@@ -17,8 +16,6 @@ install:
 script:
   - ##./norminette/norminette.rb *.c
   - make
-  - cp libft.a libft-test/
-  - cp libft.h libft-test/
-  - cd libft-test/unit_test/
-  - make
+  - gcc libft.a -I . main.c
+  - ./a.out
   - ls -la
