--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ install:
 script:
   - make
   - curl http://pastebin.com/raw.php?i=p3BBP70K > main.c
-  - gcc libft.a -I . main.c
+  - gcc -m64 libft.a -I . main.c
   - ./a.out
