--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: c
 
 compiler:
-  - gcc
+    - gcc
 
 install:
-
+    - apt-get install libacl1-dev
 script:
-  - make -C libft libft.a -j
-  - make -C libft libft_debug.a -j
-  - make -C libft libft.so -j
-  - make all -j
-  - make debug -j
+    - make -C libft libft.a -j
+    - make -C libft libft_debug.a -j
+    - make -C libft libft.so -j
+    - make all -j
+    - make debug -j
