--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: adoussau <antoine@doussaud.org>            +#+  +:+       +#+         #
+#    By: aalliot <aalliot@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2014/11/06 10:11:24 by adoussau          #+#    #+#              #
-#    Updated: 2014/11/28 15:13:43 by adoussau         ###   ########.fr        #
+#    Created: 2014/11/10 11:30:22 by aalliot           #+#    #+#              #
+#    Updated: 2015/01/02 16:57:31 by aalliot          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -52,14 +52,11 @@ SRC		=	ft_bzero.c				\
 			ft_strtrim.c			\
 			ft_tolower.c			\
 			ft_toupper.c			\
-			ft_islower.c			\
-			ft_isupper.c			\
 			ft_isprint.c			\
 			ft_isascii.c			\
 			ft_isdigit.c			\
 			ft_isalnum.c			\
 			ft_isalpha.c			\
-			ft_isspace.c			\
 			ft_atoi.c				\
 			ft_itoa.c				\
 			ft_putchar.c			\
@@ -76,16 +73,18 @@ SRC		=	ft_bzero.c				\
 			ft_lstdel.c				\
 			ft_lstadd.c				\
 			ft_lstiter.c			\
-			ft_lstmap.c				\
 			ft_lstpushback.c		\
 			ft_lstsmartpushback.c	\
 			ft_lstsimpledel.c		\
 			ft_lstsimpledelone.c	\
 			ft_malloc.c				\
 			ft_burger.c				\
-			ft_sort_qck.c			\
-			ft_sort_bbl.c			\
 			ft_swap.c				\
+			ft_sort_bbl.c			\
+			ft_sort_qck.c			\
+			ft_sort_mrg.c			\
+			ft_intlen.c				\
+			ft_llilen.c				\
 			get_next_line.c
 
 DYNAMIC_OBJ	= $(patsubst %.c,$(DYNAMIC_DIR)/%.o,$(SRC))
@@ -99,15 +98,8 @@ STATIC_DIR	= static
 DYNAMIC_DIR	= dynamic
 
 CC			= gcc
-NORMINETTE	= ~/project/colorminette/colorminette
+FLAGS		= -Wall -Wextra -Werror
 
-UNAME_S := $(shell uname -s)
-
-ifeq ($(UNAME_S),Linux)
-	FLAGS	= -Wall -Wextra #-Werror
-else
-	FLAGS	= -Wall -Wextra -Werror
-endif
 $(shell mkdir -p $(STATIC_DIR) $(DYNAMIC_DIR) $(DEBUG_DIR))
 
 all: $(STATIC_LIB) $(DYNAMIC_LIB) $(DEBUG_LIB)
@@ -121,27 +113,26 @@ $(DEBUG_LIB): $(DEBUG_OBJ)
 	ranlib $@
 
 $(DYNAMIC_LIB): $(DYNAMIC_OBJ)
-	$(CC) -O3 -shared -o $@ $(DYNAMIC_OBJ)
+	$(CC) -shared -o $@ $(DYNAMIC_OBJ)
 
 $(STATIC_DIR)/%.o: $(SRC_DIR)/%.c
-	$(CC) -O3 -I $(HEAD_DIR) -o $@ -c $< $(FLAGS)
+	$(CC) -I $(HEAD_DIR) -o $@ -c $< $(FLAGS)
 
 $(DEBUG_DIR)/%.o: $(SRC_DIR)/%.c
-	$(CC) -O3 -I $(HEAD_DIR) -o $@ -c $< $(FLAGS) -g
+	$(CC) -I $(HEAD_DIR) -o $@ -c $< $(FLAGS) -g
 
 $(DYNAMIC_DIR)/%.o: $(SRC_DIR)/%.c
-	$(CC) -O3 -fPIC -I $(HEAD_DIR) -o $@ -c $< $(FLAGS)
+	$(CC) -fPIC -I $(HEAD_DIR) -o $@ -c $< $(FLAGS)
 
-.PHONY: clean fclean re norme
+.PHONY: clean fclean re norm
+
+norm:
+	@norminette $(patsubst %,$(SRC_DIR)/%,$(SRC)) $(HEAD_DIR)/libft.h $(HEAD_DIR)/get_next_line.h
 
 clean:
-	rm -f $(STATIC_OBJ) $(DYNAMIC_OBJ) $(DEBUG_OBJ)
+	@rm -f $(STATIC_OBJ) $(DYNAMIC_OBJ) $(DEBUG_OBJ)
 
 fclean: clean
-	rm -f $(STATIC_LIB) $(DYNAMIC_LIB) $(DEBUG_LIB)
+	@rm -f $(STATIC_LIB) $(DYNAMIC_LIB) $(DEBUG_LIB)
 
-norme:
-	$(NORMINETTE) $(SRC_DIR)/ $(HEAD_DIR)/
-
-re: fclean
-	make
+re: fclean all
